--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 
                     <h3><i class="fa fa-mobile fa-fw"></i>Contacts</h3>
                     <p>Email: <a href="mailto:yourname@meatking.com">olobulumuntere@gmail.com</a></p>
-                    <p>Phone: +254715465463</p>
+                    <p>Phone: <a href="+25471546563">+254715465463</a></p>
 
                 </div><!-- col-md-6 -->
             </div>
